feat(EIDOMNI-147) : add tests for CredentialService